# utai.au

./: .gitignore  .mcp.json  .stylelintrc.json  AGENTS.md  README.md  bunfig.toml  docker-compose.dev.yml  package.json  paseo.json  playwright.config.ts  playwright.live.config.ts  tsconfig.json  vite.config.ts  wdio.conf.ts
.claude/: bash-redirects.json  settings.json
.claude/skills/overnight/: SKILL.md
.claude/skills/overnight-now/: SKILL.md
.github/actions/deploy-to-r2/: action.yml
.github/workflows/: deploy-r2.yml  desktop-build.yml
.storybook/: main.ts  preview-head.html  preview.tsx
aligner/: pyproject.toml
aligner/app/: __init__.py  cache.py  config.py  debug.py  main.py  models.py  pitch_sidecar.py  request_context.py  sidecar.py
aligner/app/comms/: align_lyrics_runner.py  core.py  protocol.py  runners.py  separate_runner.py  separate_stems_runner.py  stdio_adapter.py
aligner/app/music/: __init__.py  _spotify_login.py  facade.py  models.py  onthespot_client.py  ots_config.py  routes.py  spotify_oauth.py
aligner/app/pipeline/: __init__.py  audio_io.py  gpu_park.py  jp_romaji.py  lyrics_align.py  lyrics_onnx.py  onnx_cuda.py  onnx_fp16.py  provision.py  separate.py
aligner/app/pipeline/pitch/: __init__.py  analyze.py  f0.py  features.py  live.py  rmvpe.py
aligner/app/pipeline/separation/: __init__.py  _chunking.py  coreml_optimize.py  export.py  loader.py  mha_fusion.py  np_inference.py  np_stft.py  onnx_stft.py  runner.py
aligner/app/pipeline/separation/architectures/: __init__.py  attend.py  bs_roformer.py  mel_band_roformer.py  tfc_tdf.py
aligner/tests/: conftest.py  test_audio_io.py  test_coreml_optimize.py  test_export_int8.py  test_gpu_park_vocals.py  test_jp_romaji.py  test_lyrics_align.py  test_lyrics_align_cache.py  test_lyrics_align_stream.py  test_lyrics_onnx.py  test_lyrics_separate.py  test_mha_fusion.py  test_music_facade.py  test_music_routes.py  test_np_stft_parity.py  test_onnx_model_e2e.py  test_onnx_stft.py  test_pitch_features.py  test_pitch_live.py  test_pitch_sidecar.py  test_pitch_vibrato_regression.py  test_provision_download.py  test_provision_onnx.py  test_provision_update.py  test_sep_trt_providers.py  test_separation_parity.py  test_spotify_oauth.py  test_torch_free_runtime.py
aligner/tests/fixtures/: capture_vibrato_cases.py  vibrato_cases.json
docker/: Caddyfile  README.md  backend.Dockerfile  caddy.Dockerfile  onthespot.Dockerfile  overrides-torch-free.txt
docs/: design-system.md  lyrics-alignment.md
docs/superpowers/specs/: 2026-07-07-native-audio-engine-design.md
e2e-live/: music_source.e2e.ts
e2e-shared/: flows.ts  ui_driver.ts
e2e-tauri/: capabilities.wdio.ts  cross_engine.wdio.ts  smoke.wdio.ts
frontend/: index.html
frontend/src/: design_tokens.css  globals.d.ts  index.tsx  typography.module.css
frontend/src/audio_devices/: audio_controls.module.css  audio_controls.tsx  audio_device_contexts.ts  audio_device_presenter.ts  audio_device_store.ts  audio_io_backend.ts  audio_settings.module.css  audio_settings.tsx  native_audio_backend.ts  native_latency_controls.tsx  web_audio_backend.ts
frontend/src/audio_devices/test/: audio_device_presenter.test.ts  audio_settings.e2e.ts
frontend/src/editing/: editor_contexts.ts  jot_editor.module.css
frontend/src/editing/lyrics/: lyric_chips.tsx  lyric_layout.ts  lyrics_align_store.ts  lyrics_contexts.ts  lyrics_measure.ts  lyrics_overflow_menu.tsx  lyrics_presenter.ts  lyrics_search_modal.module.css  lyrics_search_modal.tsx  lyrics_text_modal.module.css  lyrics_text_modal.tsx  lyrics_track_view.module.css  lyrics_track_view.tsx
frontend/src/editing/mixer/: audio_track_view.module.css  audio_track_view.tsx  mixer.module.css  waveform_chunks.ts
frontend/src/karaoke/: karaoke_contexts.ts  karaoke_page.module.css  karaoke_page.tsx  karaoke_presenter.ts  song_bundle.ts  song_details_modal.module.css  song_details_modal.tsx  song_io_presenter.ts  song_schema.ts  song_store.ts
frontend/src/lyrics/: auto_lyrics.ts  enhanced_lrc.ts  forced_align.ts  furigana.ts  jmdict_furigana_loader.ts  kuromoji_internal.d.ts  kuromoji_loader.ts  lrc.ts  lrclib.ts  pitch_contour.ts  separate_stems.ts  store.ts
frontend/src/music_source/: music_search_modal.module.css  music_search_modal.tsx  music_settings_modal.module.css  music_settings_modal.tsx  music_source_contexts.ts  music_source_presenter.ts  music_source_store.ts  music_sources_settings.module.css  music_sources_settings.tsx
frontend/src/net/: backend_fetch.ts  control_protocol.ts  music_source_client.ts  sidecar_transport.ts
frontend/src/provisioning/: provisioning_presenter.ts  provisioning_source.ts  provisioning_store.ts  sidecar_provisioning_source.ts  startup_gate.module.css  startup_gate.tsx
frontend/src/scoring/: create_live_pitch_source.ts  live_pitch_source.ts  onnx_live_pitch_source.ts  reference_targets.ts  scoring.ts  scoring_contexts.ts  scoring_hud.module.css  scoring_hud.tsx  scoring_presenter.ts  scoring_store.ts  sidecar_live_pitch_source.ts
frontend/src/settings/: app_settings_presenter.ts  app_settings_store.ts  settings_modal.tsx  settings_modal_context.tsx
frontend/src/ui/: menu_keyboard.ts
frontend/src/utils/: download.ts
patches/: @wdio%2Fnative-utils@2.4.0.patch
research/: lyrics-alignment-browser.md  separation-models-research.md
sandbox/: Dockerfile  start.sh
scripts/: build-furigana-dict.ts  build-wdio-app.ts  build_env.ts  check-py  copy-kuromoji-dict.ts  export_onnx_models.py  mac-build.ts  prepare-desktop-resources.ts  sandbox-bun  sandbox-py  sandbox-run  tauri-build.ts  test-py  win-build.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/src/: decode.rs  device.rs  lib.rs  mixer.rs  resample.rs  transport.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  capability.rs  lib.rs  logs.rs  no_console.rs  paths.rs  pitch.rs  sidecar.rs  wdio_capability.json
(+95 files in other folders)
