[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "utai-aligner"
version = "0.1.0"
description = "Lyrics alignment + vocal separation service for Utai."
requires-python = ">=3.11"
# Lean base: the API shell + the stdio sidecar (control protocol). Everything
# heavy (torch / separation / lyrics) lives in the capability dependency-groups
# below, so the desktop installer can pull one capability at a time. `uv sync`
# installs the default-groups (full parity for dev / Docker); the desktop
# installer uses `uv sync --no-default-groups --group <capability>` (base deps +
# that group).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
]

# Capability dependency-groups (PEP 735).
[dependency-groups]
# Torch-free runtime base: audio IO + numeric libs the ONNX inference path uses
# (librosa loads/resamples, soundfile writes stems, scipy windows, numpy math).
runtime = [
    "librosa>=0.10.2",
    "soundfile>=0.12",
    "scipy>=1.11",
    "numpy>=1.26",
]

# Stem separation runtime: Mel-Band Roformer vocals stem via the torch-free ONNX path
# (NumpySeparator + onnxruntime). Its own capability so a user can stem-split
# without the lyrics stack. NO torch -- the shipped inference path is onnxruntime
# only; torch is opt-in via the `torch` group (export + UTAI_SEP_ONNX=0 fallback).
separation = [
    { include-group = "runtime" },
    # Cross-platform ONNX inference path (UTAI_SEP_ONNX). `onnxruntime-gpu`
    # (CUDA / DirectML) ships Linux + Windows wheels only; on macOS the standard
    # `onnxruntime` arm64 wheel carries the CoreML EP (Apple GPU/ANE). Pin the
    # CUDA-12 line: 1.26 moved to a CUDA-13 build (libcudart.so.13); the CUDA libs
    # below are CUDA 12, so <=1.25.x matches. Bump only alongside a CUDA-13 base.
    "onnxruntime-gpu>=1.19,<1.26; sys_platform != 'darwin'",
    "onnxruntime>=1.19,<1.26; sys_platform == 'darwin'",
    # `onnx` (distinct from onnxruntime): the folded STFT/iSTFT path builds its
    # forward/inverse graphs with onnx.helper at runtime (onnx_stft.py), so it's a
    # separation runtime dep, not just export tooling. Without it the fold's import
    # fails and separation silently falls back to the (2x slower) numpy pre/post.
    "onnx>=1.16",
    # CUDA 12 runtime libs for the onnxruntime-gpu CUDA EP (Linux/Windows). These
    # used to arrive transitively via torch's nvidia-* wheels; with torch out of
    # the runtime we depend on them directly. `onnx_cuda.preload_cuda_libs` globs
    # site-packages/nvidia/*/lib/*.so and RTLD_GLOBAL-preloads them so the CUDA EP
    # can dlopen its provider. cuDNN 9.x matches onnxruntime-gpu 1.19-1.25; macOS
    # uses the CoreML EP (no CUDA).
    "nvidia-cudnn-cu12>=9,<10; sys_platform != 'darwin'",
    "nvidia-cublas-cu12; sys_platform != 'darwin'",
    # TensorRT runtime for the onnxruntime TensorRT EP. Separation runs a FIXED 8s chunk, so the
    # per-shape engine rebuild that makes TRT a poor fit for variable-length audio is a one-time,
    # cached cost -- and it's the ~100x-realtime path (vs ~8-18x on the CUDA EP). Opt out via
    # UTAI_SEP_TRT=0; onnx_cuda.preload_tensorrt_libs RTLD_GLOBAL-preloads its libnvinfer so the EP
    # can dlopen it. TRT 10.x matches onnxruntime-gpu 1.19-1.25 (CUDA 12); absent -> stays on CUDA.
    "tensorrt-cu12>=10,<11; sys_platform != 'darwin'",
]

# Lyrics alignment: MahmoudAshraf97's long-form CTC forced aligner (MMS-300m).
# Pinned by commit SHA. NOT the deskpai PyPI port, which hard-pins the CPU
# onnxruntime wheel and shadows onnxruntime-gpu. Includes separation: the mix flow
# runs the Mel-Band Roformer separator to extract a vocals stem before aligning.
# `transformers` is used tokenizer-only here (torch-free); the CTC maths run
# through the vendored torch-free path (lyrics_onnx.py).
#
# NB torch caveat: `ctc-forced-aligner` declares torch as a dependency, so a plain
# `uv sync --group lyrics` still pulls torch transitively. The shipped torch-free
# install drops it with an install-time override (see the desktop installer /
# `overrides-torch-free.txt`); the vendored path only needs the package's C++
# `forced_align` kernel + text_utils, not torch.
lyrics = [
    { include-group = "separation" },
    "transformers>=4.40",
    "ctc-forced-aligner @ git+https://github.com/MahmoudAshraf97/ctc-forced-aligner.git@264e7a1f81bff9ff5e787a5537020c2ad0b0df02",
]

# Japanese-aware romanization for lyrics: cutlet (fugashi/MeCab + unidic-lite)
# produces contextual readings before they reach the aligner's preprocess_text.
lyrics-ja = [
    { include-group = "lyrics" },
    "cutlet>=0.4",
    "fugashi>=1.3",
    "unidic-lite>=1.0.8",
]

# Music-source (OnTheSpot) Spotify OAuth. librespot logs in with a pasted OAuth
# code and produces the reusable `{username, credentials, type}` blob OnTheSpot
# stores for a Spotify account. The SAME fork OnTheSpot depends on, so the blob
# is byte-compatible with what its own desktop login writes. Imported lazily
# (app/music/spotify_oauth.py), so the base app + non-Spotify music flows run
# without it; only a Spotify sign-in needs it.
music = [
    "librespot @ git+https://github.com/justin025/librespot-python.git",
]

# Torch: NOT shipped in the desktop capability install (which runs provisioned
# fp16 ONNX, torch-free). Needed only for (1) the one-time ONNX export
# (export_onnx_models.py / separation/export.py + lyrics_onnx.export_ctc_model),
# (2) the UTAI_SEP_ONNX=0 / UTAI_LYRICS_ONNX=0 torch fallback + A-B paths, and
# (3) the vendored Roformer model classes (einops / rotary-embedding-torch /
# ml-collections are imported only on that torch path).
torch = [
    "torch>=2.8,<2.12",
    "torchaudio>=2.8,<2.12",
    "einops>=0.8",
    "rotary-embedding-torch>=0.6",
    "ml-collections>=1.1",
]

# Dev-only: linters, tests, and the ONNX export/fp16-convert toolchain (needs
# torch, so this pulls the `torch` group -- dev / Docker keep full parity: both
# runtime paths + export). Not shipped in the desktop install (the shipped runtime
# downloads pre-built fp16 onnx via provision and never exports; see
# allow_local_export). `onnxsim` (onnx-simplifier) is export-only: coreml_optimize
# uses it to fold the Roformer graph.
dev = [
    { include-group = "torch" },
    "ruff>=0.6",
    "pytest>=8",
    "onnxsim>=0.4",
]

# PyTorch lives on a dedicated wheel index because the default PyPI wheels now
# target CUDA 13 (driver 580+); cu128 = CUDA 12.8 = highest CUDA most consumer
# drivers (570+) handle. `explicit = true` means packages come from this index
# only when listed in [tool.uv.sources].
[tool.uv]
# `uv sync` installs all groups so dev / Docker keep full parity; the desktop
# installer pulls capabilities via `uv sync --no-default-groups --group <cap>`
# (base deps plus the selected group(s)).
default-groups = ["dev", "lyrics", "lyrics-ja", "music"]
# Drop torchvision: unused, and on cu128/WSL its compiled ops fail to load and
# break transformers model loading. The impossible marker removes it from the
# resolved graph.
override-dependencies = ["torchvision; sys_platform == 'never'"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# cu128 torch is Linux/Windows only; on macOS torch resolves from PyPI (the arm64
# MPS build) by having no source point at the cu128 index there.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
# Match repo-wide style: 100-char line limit.
line-length = 100
target-version = "py311"
extend-exclude = [
    # Cached / generated dirs that shouldn't be linted even if present.
    ".venv",
    "venv",
    "build",
    "models",
    # Vendored Roformer model classes (copied near-verbatim from
    # audio-separator so they stay diffable against upstream); not our style.
    "app/pipeline/separation/architectures",
]

[tool.ruff.lint]
# Enabled lint groups, in roughly decreasing order of strictness:
#   E,W = pycodestyle errors / warnings
#   F   = pyflakes (unused imports, undefined names, ...)
#   I   = isort (import sorting)
#   B   = flake8-bugbear (likely bugs)
#   UP  = pyupgrade (modern syntax suggestions)
#   SIM = flake8-simplify
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
# E501 line-too-long is reported by `select = ["E"]` but we already cap
# at 100 chars; long URLs / log strings shouldn't trip ruff for cosmetic
# reasons - the formatter (if/when adopted) handles wrapping anyway.
ignore = [
    "E501",
    # B008: function calls in defaults are intentional for FastAPI's
    # `Depends(...)` / `File(...)` parameter pattern.
    "B008",
    # SIM117: nested `with` blocks are kept for readability in places.
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
# Tests use deliberately ugly fixtures and patterns; relax the checks.
"tests/*" = ["E", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
